# mem3_game

./: .gitignore  Cargo.toml  Makefile.toml  README.md
mem3/: CHANGELOG.md  Cargo.toml  Makefile.toml  README.md
mem3/src/: gamedata.rs  lib.rs  playersandscores.rs  rulesanddescription.rs  websocketcommunication.rs
mem3_common/: Cargo.toml  Makefile.toml  README.md
mem3_common/src/: lib.rs
mem3_server/: .gitignore  Cargo.toml  Makefile.toml  README.md
mem3_server/mem3/: index.html
mem3_server/src/: main.rs
webfolder/mem3/: index.html
webfolder/mem3/content/animals/: text.json
webfolder/mem3/css/: mem3.css
