[package]
name = "mem3_common"
version = "1.0.0" 
description = "commons for mem3 wasm and server"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bestia-dev/mem3_game"
categories = ["web-programming::http-server"]
keywords = ["warp", "server", "http", "websocket"]
publish = false

[dependencies]
serde = "1.0.91"
serde_derive = "1.0.91"
serde_json = "1.0"