[package]
name = "mem3_server"
version = "1.0.0" 
description = "server for the game mem3 http + websocket on the same port"
authors = ["Luciano Bestia"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/lucianobestia/mem3_server"
categories = ["web-programming::http-server"]
keywords = ["warp", "server", "http", "websocket"]

[dependencies]
futures = "0.1"
log = "0.4.6"
env_logger = "0.6.1"
warp="0.1.15"
regex="1.1.6"
# cmd line input parameters
clap ="2.33.0"
# colorful output to screen
ansi_term = "0.11.0"
