[package]
name = "mem3_server"
version = "1.0.0" 
description = "server for the game mem3 http + websocket on the same port"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bestia-dev/mem3_game"
categories = ["web-programming::http-server"]
keywords = ["warp", "server", "http", "websocket"]
publish = false

[dependencies]
mem3_common = { path = "../mem3_common" }
futures = "0.1"
log = "0.4.6"
env_logger = "0.6.1"
warp="0.1.15"
regex="1.1.6"
# cmd line input parameters
clap ="2.33.0"
# colorful output to screen
ansi_term = "0.11.0"
serde = "1.0.91"
serde_derive = "1.0.91"
serde_json = "1.0"